--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "webpack-less-template",
+  "name": "thinkful-trello",
   "version": "0.0.1",
   "description": "",
-  "main": "js/index.js",
+  "main": "js/index.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "mkdir": "mkdir -p build",
-    "build": "npm run clean && npm run mkdir && npm run build:html && npm run build:css && npm run build:js",
-    "watch": "npm run watch:html & npm run watch:css & npm run watch:js",
+    "build": "npm run clean && npm run mkdir && npm run build:html && npm run build:css && npm run build:jsx",
+    "watch": "npm run watch:html & npm run watch:css & npm run watch:jsx",
     "clean": "rm -rf build",
     "build:html": "npm run clean:html && cp index.html build/",
     "watch:html": "npm run build:html && chokidar index.html -c 'npm run build:html'",
@@ -15,9 +15,9 @@
     "build:css": "npm run clean:css && lessc --source-map css/index.less build/$npm_package_name.$npm_package_version.css",
     "watch:css": "npm run build:css && chokidar 'css/**/*.less' -c 'npm run build:css'",
     "clean:css": "rm -f build/$npm_package_name.$npm_package_version.css build/$npm_package_name.$npm_package_version.css.map",
-    "build:js": "npm run clean:js && webpack",
-    "watch:js": "npm run build:js && webpack --watch",
-    "clean:js": "rm -f build/$npm_package_name.$npm_package_version.js build/$npm_package_name.$npm_package_version.js.map"
+    "build:jsx": "npm run clean:jsx && webpack",
+    "watch:jsx": "npm run build:jsx && webpack --watch",
+    "clean:jsx": "rm -f build/$npm_package_name.$npm_package_version.jsx build/$npm_package_name.$npm_package_version.jsx.map"
   },
   "author": "",
   "license": "ISC",
