--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "mkdir": "mkdir -p build",
+    "serve": "http-server build",
     "build": "npm run clean && npm run mkdir && npm run build:html && npm run build:css && npm run build:jsx",
     "watch": "npm run watch:html & npm run watch:css & npm run watch:jsx",
     "clean": "rm -rf build",
@@ -28,6 +29,7 @@
     "babel-preset-react": "^6.5.0",
     "chokidar-cli": "^1.2.0",
     "clean-css": "^3.4.12",
+    "http-server": "^0.9.0",
     "less": "^2.7.1",
     "uglify-js": "^2.6.2",
     "webpack": "^1.13.0"
